修改企业名称

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta name="keywords" content="大度机械,全自动装盒机,专业从事自动化包装设备的研发" />
 		<meta name="Description" content="广州大度机械技有限公司是一家专业从事自动化包装设备的研发、制造、销售和服务的民营企业，属中国制药装备行业协会会员单位。" />
-		<title>广州大度机械技</title>
+		<title>广州大江机械技</title>
 		<link rel="icon" sizes="any" mask href="_R/images/icon/icon.png">
 		<link rel="stylesheet" href="_R/css/layui.css">
 		<link rel="stylesheet" href="_R/css/common.css">
